--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "webgl-page-curl.js",
   "scripts": {
-    "test": "vitest run"
+    "test": "vitest run",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "prettier": "^3.5.3",
     "vitest": "^3.1.3"
   },
   "type": "module"
