--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "webgl-page-curl.js",
   "scripts": {
-    "test": "vitest run",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
@@ -11,8 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "prettier": "^3.5.3",
-    "vitest": "^3.1.3"
+    "prettier": "^3.5.3"
   },
   "type": "module"
 }
