--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "webgl-page-curl",
   "version": "1.0.0",
+  "description": "3D page-curl animation of a DOM element",
   "main": "webgl-page-curl.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
-  "author": "",
+  "keywords": [
+    "webgl",
+    "page curl",
+    "curl effect",
+    "page transition",
+    "animation",
+    "html2canvas"
+  ],
+  "author": "Dan Fabulich <dan@fabulich.com>",
   "license": "ISC",
-  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dfabulich/webgl-page-curl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dfabulich/webgl-page-curl/issues"
+  },
+  "homepage": "https://github.com/dfabulich/webgl-page-curl#readme",
+  "files": [
+    "webgl-page-curl.js",
+    "README.md",
+    "LICENSE"
+  ],
   "devDependencies": {
     "prettier": "^3.5.3"
-  },
-  "type": "module"
+  }
 }
