--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild src/webgl-page-curl.js --bundle --outfile=dist/webgl-page-curl.js --format=esm --minify",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
@@ -33,6 +34,7 @@
     "LICENSE"
   ],
   "devDependencies": {
+    "esbuild": "^0.25.4",
     "prettier": "^3.5.3"
   }
 }
