--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/webgl-page-curl.js --bundle --outfile=dist/webgl-page-curl.js --format=esm --minify",
+    "build": "node build.mjs",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "esbuild": "^0.25.4",
+    "esbuild-plugin-glsl": "^1.4.0",
     "prettier": "^3.5.3"
   }
 }
