--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "webgl-page-curl",
   "version": "1.0.1",
   "description": "3D page-curl animation of a DOM element",
-  "main": "webgl-page-curl.js",
+  "main": "dist/webgl-page-curl.js",
+  "types": "dist/webgl-page-curl.d.ts",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build.mjs",
+    "build:js": "node build.mjs",
+    "build:types": "tsc --project tsconfig.json",
+    "build": "npm run build:js && npm run build:types",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
@@ -36,6 +39,7 @@
   "devDependencies": {
     "esbuild": "^0.25.4",
     "prettier": "^3.5.3",
-    "shader-minifier-wasm": "^0.1.2"
+    "shader-minifier-wasm": "^0.1.2",
+    "typescript": "^5.8.3"
   }
 }
