--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:js": "node build.mjs",
     "build:types": "tsc --project tsconfig.json",
     "build": "npm run build:js && npm run build:types",
+    "build:fast:js": "FAST_BUILD=true node build.mjs",
+    "build:fast": "npm run build:fast:js && npm run build:types",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
