--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm run build:js && npm run build:types",
     "build:fast:js": "FAST_BUILD=true node build.mjs",
     "build:fast": "npm run build:fast:js && npm run build:types",
+    "dev": "FAST_BUILD=true WATCH_MODE=true node build.mjs",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
