--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:js": "node build.mjs",
+    
+    "build:js:dev": "OUTPUT_FILE=dist/webgl-page-curl.js MINIFY_LEVEL=none node build.mjs",
+    "build:js:prod": "OUTPUT_FILE=dist/webgl-page-curl.min.js MINIFY_LEVEL=full node build.mjs",
+    "build:js": "npm run build:js:dev && npm run build:js:prod",
+    
     "build:types": "tsc --project tsconfig.json",
     "build": "npm run build:js && npm run build:types",
-    "build:fast:js": "FAST_BUILD=true node build.mjs",
+    
+    "build:fast:js": "OUTPUT_FILE=dist/webgl-page-curl.js MINIFY_LEVEL=none node build.mjs", 
     "build:fast": "npm run build:fast:js && npm run build:types",
-    "dev": "FAST_BUILD=true WATCH_MODE=true node build.mjs",
+    
+    "dev": "WATCH_MODE=true OUTPUT_FILE=dist/webgl-page-curl.js node build.mjs",
+    
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,html,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,html,css,md}\""
   },
