--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "rm -rf dist && npm run build",
     
     "build:js:dev": "OUTPUT_FILE=dist/webgl-page-curl.js MINIFY_LEVEL=none node build.mjs",
     "build:js:prod": "OUTPUT_FILE=dist/webgl-page-curl.min.js MINIFY_LEVEL=full node build.mjs",
